--- a/templates/index.html
+++ b/templates/index.html
@@ -11,16 +11,15 @@
     астерик, asterik, телефония, sip, mms, sms, интернет-магазин, создать, компании, forbes, форбс, лучшие, it-компании, Казахстан, Казахстана, России, 
     Российской Федерации, челябинск, рудный, костанай, алмата, межригональный, лисаковск, телеграм-бот, боты, бот, дискорд-бот, консоль, ispconfig, 
     ispmanager, как создать">
-    <link rel="manifest" href="image/index/favicon/manifest.json">
+    <link rel="manifest" href="static/images/index/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="image/index/favicon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="static/images/index/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="css/index/index.css">
+    <link rel="stylesheet" href="static/css/index/index.css">
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="js/scroll.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   
 
@@ -44,16 +43,12 @@
 
 <header class="header">
     <div class="header-logo">
-        <!-- <img src=""> -->
     </div>
     <input type="checkbox" id="nav_check" hidden>
     <nav>
-        <!-- <div class="header-logo">
-            <img src="" alt="Logo">
-        </div> -->
         <ul>
             <li>
-                <a href="outsourcing/index.html" key="itoutsourcing">IT-Аутсорсинг</a>
+                <a href="" key="itoutsourcing">IT-Аутсорсинг</a>
             </li>
             <li>
                 <a href="" key="home">Главная</a>
@@ -85,7 +80,7 @@
     </a>
   </div>
   <div class="contact-item">
-    <a href="redirect/whatsapp.html" target="_blank">
+    <a href="/whatsapp" target="_blank">
       <i class='bx bxs-chat icon-i-white'></i>
     </a>
   </div>
@@ -96,7 +91,7 @@
 
 <div class="header-background-intro">
   <video autoplay loop muted>
-      <source src="image/index/background/background8.mp4" type="video/mp4">
+      <source src="static/images/index/background/background8.mp4" type="video/mp4">
   </video>
   <div class="header-background-intro-text">
       <h1 key="build-future">СТРОИМ БУДУЩЕЕ ОРГАНИЗАЦИИ</h1>
@@ -112,9 +107,9 @@
     <h2 class="heading-pg" key="what-services">Какие услуги предоставляет наша компания?</h2>
     <p class="description-pg" key="services-description">Компания Malstavo предоставляет широкий спектр услуг в области IT-технологий, охватывая ключевые направления, необходимые как стартапам, так и устоявшимся компаниям для обеспечения стабильного роста. Объединяя некоторые из наших услуг, мы стремимся достичь оптимальных результатов.</p>
     <div class="w-layout-grid service-grid">
-      <a href="/order-page/order-page.html?category=web-development" class="service-card w-inline-block">
+      <a href="/order?category=web-development" class="service-card w-inline-block">
         <div class="service-img">
-          <img src="image/index/service/create-site.png" class="hover-image">
+          <img src="static/images/index/service/create-site.png" class="hover-image">
         </div>
         <div class="service-content">
           <h1 key="web-development">Разработка сайтов</h1>
@@ -126,9 +121,9 @@
           </div>
         </div>
       </a>
-      <a href="/order-page/order-page.html?category=mobile-apps" class="service-card w-inline-block">
+      <a href="/order?category=mobile-apps" class="service-card w-inline-block">
         <div class="service-img">
-          <img src="image/index/service/create-app.png" class="hover-image">
+          <img src="static/images/index/service/create-app.png" class="hover-image">
         </div>
         <div class="service-content">
           <h1 key="mobile-apps">Мобильные приложения</h1>
@@ -140,9 +135,9 @@
           </div>
         </div>
       </a>
-      <a href="/order-page/order-page.html?category=telegram-bots" class="service-card w-inline-block">
+      <a href="/order?category=telegram-bots" class="service-card w-inline-block">
         <div class="service-img">
-          <img src="image/index/service/telegram.png" class="hover-image">
+          <img src="static/images/index/service/telegram.png" class="hover-image">
         </div>
         <div class="service-content">
           <h1 key="telegram-bots">Разработка Telegram-ботов</h1>
@@ -154,9 +149,9 @@
           </div>
         </div>
       </a>
-      <a href="/order-page/order-page.html?category=discord-bots" class="service-card w-inline-block">
+      <a href="/order?category=discord-bots" class="service-card w-inline-block">
         <div class="service-img">
-          <img src="image/index/service/discord.png" class="hover-image">
+          <img src="static/images/index/service/discord.png" class="hover-image">
         </div>
         <div class="service-content">
           <h1 key="discord-bots">Разработка Discord-ботов</h1>
@@ -168,9 +163,9 @@
           </div>
         </div>
       </a>
-      <a href="/order-page/order-page.html?category=technical-maintenance" class="service-card w-inline-block">
+      <a href="/order?category=technical-maintenance" class="service-card w-inline-block">
         <div class="service-img">
-          <img src="image/index/service/service.png" class="hover-image">
+          <img src="static/images/index/service/service.png" class="hover-image">
         </div>
         <div class="service-content">
           <h1 key="technical-support">Техническое обслуживание</h1>
@@ -182,9 +177,9 @@
           </div>
         </div>
       </a>
-      <a href="/order-page/order-page.html?category=hosting-vds" class="service-card w-inline-block">
+      <a href="/order?category=hosting-vds" class="service-card w-inline-block">
         <div class="service-img">
-          <img src="image/index/service/vds.png" class="hover-image">
+          <img src="static/images/index/service/vds.png" class="hover-image">
         </div>
         <div class="service-content">
           <h1 key="vds-hosting">Bussines-VDS Хостинг</h1>
@@ -196,9 +191,9 @@
           </div>
         </div>
       </a>
-      <a href="/order-page/order-page.html?category=domain-registration" class="service-card w-inline-block">
+      <a href="/order?category=domain-registration" class="service-card w-inline-block">
         <div class="service-img">
-          <img src="image/index/service/domain.png" class="hover-image">
+          <img src="static/images/index/service/domain.png" class="hover-image">
         </div>
         <div class="service-content">
           <h1 key="domain-registration">Регистрация доменных имен</h1>
@@ -210,9 +205,9 @@
           </div>
         </div>
       </a>
-      <a href="/order-page/order-page.html?category=security-cameras" class="service-card w-inline-block">
+      <a href="/order?category=security-cameras" class="service-card w-inline-block">
         <div class="service-img">
-          <img src="image/index/service/sapsan-cctv.png" class="hover-image">
+          <img src="static/images/index/service/sapsan-cctv.png" class="hover-image">
         </div>
         <div class="service-content">
           <h1 key="video-surveillance">Камеры видеонаблюдения</h1>
@@ -268,7 +263,7 @@
             </div>
           </div>
           <div class="product-tab-content-image-holder">
-            <img src="image/index/product/discord-bot-cse-illustration.jpg" class="hover-image" alt="CSM illustration">
+            <img src="static/images/index/product/discord-bot-cse-illustration.jpg" class="hover-image" alt="CSM illustration">
           </div>
         </div>
       </div>
@@ -322,16 +317,16 @@
 <h2 class="heading-pg" key="partnerssubtitle">Эти компании пользуются нашими услугами</h2>
 <p class="description-pg" key="partnersdescription"></p>
 <div class="w-layout-grid logo-wrapper">
-    <img src="image/index/partners/kazakhmys.png" loading="lazy" alt="Kazakhmys" class="lw-logo-image">
-    <img src="image/index/partners/aok.png" loading="lazy" alt="AOK" class="lw-logo-image">
-    <img src="image/index/partners/eec.png" loading="lazy" alt="EEC" class="lw-logo-image">
-    <img src="image/index/partners/arcelormittal.png" loading="lazy" alt="ArcelorMittal" class="lw-logo-image">
-    <img src="image/index/partners/shubarkolkomir.png" loading="lazy" alt="Shubarkolkomir" class="lw-logo-image">
-    <img src="image/index/partners/kas.png" loading="lazy" alt="KAS" class="lw-logo-image">
-    <img src="image/index/partners/polimetall.png" loading="lazy" alt="Polimetall" class="lw-logo-image">
-    <img src="image/index/partners/ssgpo.png" loading="lazy" alt="SSGPO" class="lw-logo-image">
-    <img src="image/index/partners/kazchrome.png" loading="lazy" alt="Kazchrome" class="lw-logo-image">
-    <img src="image/index/partners/gazprom.png" loading="lazy" alt="Gazprom" class="lw-logo-image">
+    <img src="static/images/index/partners/kazakhmys.png" loading="lazy" alt="Kazakhmys" class="lw-logo-image">
+    <img src="static/images/index/partners/aok.png" loading="lazy" alt="AOK" class="lw-logo-image">
+    <img src="static/images/index/partners/eec.png" loading="lazy" alt="EEC" class="lw-logo-image">
+    <img src="static/images/index/partners/arcelormittal.png" loading="lazy" alt="ArcelorMittal" class="lw-logo-image">
+    <img src="static/images/index/partners/shubarkolkomir.png" loading="lazy" alt="Shubarkolkomir" class="lw-logo-image">
+    <img src="static/images/index/partners/kas.png" loading="lazy" alt="KAS" class="lw-logo-image">
+    <img src="static/images/index/partners/polimetall.png" loading="lazy" alt="Polimetall" class="lw-logo-image">
+    <img src="static/images/index/partners/ssgpo.png" loading="lazy" alt="SSGPO" class="lw-logo-image">
+    <img src="static/images/index/partners/kazchrome.png" loading="lazy" alt="Kazchrome" class="lw-logo-image">
+    <img src="static/images/index/partners/gazprom.png" loading="lazy" alt="Gazprom" class="lw-logo-image">
   </div>
 </div>
 </div>
@@ -390,8 +385,8 @@
 </footer>
 
 
-<script src="js/index/contact-open.js"></script>
-<script src="js/index/multiplug.js"></script>
+<script src="static/js/index/contact-open.js"></script>
+<script src="static/js/index/multiplug.js"></script>
 <!-- <script src="/js/index/check-language.js"></script>
 <script src="/js/index/return-language.js"></script> -->
 </body>
