--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,7 @@
     астерик, asterik, телефония, sip, mms, sms, интернет-магазин, создать, компании, forbes, форбс, лучшие, it-компании, Казахстан, Казахстана, России, 
     Российской Федерации, челябинск, рудный, костанай, алмата, межригональный, лисаковск, телеграм-бот, боты, бот, дискорд-бот, консоль, ispconfig, 
     ispmanager, как создать">
-    <link rel="manifest" href="static/images/index/favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="static/images/index/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="static/css/index/index.css">
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
@@ -385,9 +383,7 @@
 </footer>
 
 
-<script src="static/js/index/contact-open.js"></script>
-<script src="static/js/index/multiplug.js"></script>
-<!-- <script src="/js/index/check-language.js"></script>
-<script src="/js/index/return-language.js"></script> -->
+<script src="static/js/contact-open.js"></script>
+<script src="static/js/multiplug.js"></script>
 </body>
 </html>
