--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <div class="navbar-header-contact-entry">
             <a href="#">
                 <i class='bx bxs-phone icon-i'></i>
-                <p key="phone">+7 (000) 020-0063</p>
+                <p key="phone">+7 (000) 520-0052</p>
             </a>
         </div>
         <div class="multilang-container">
@@ -46,19 +46,19 @@
     <nav>
         <ul>
             <li>
-                <a href="" key="itoutsourcing">IT-Аутсорсинг</a>
+                <a href="" key="">Malstavo</a>
             </li>
             <li>
                 <a href="" key="home">Главная</a>
             </li>
             <li>
-                <a href="" key="aboutcompany">О компании</a>
+                <a href="#about-companys" key="aboutcompany">О компании</a>
             </li>
             <li>
                 <a href="#service-grid" key="services-header">Услуги</a>
             </li>
             <li>
-                <a href="info/about" class="active" key="feedback">Обратная связь</a>
+                <a href="/templates/login-form.html" class="active" key="log-in-account">Войти в аккаунт</a>
             </li>
         </ul>
     </nav>
@@ -92,11 +92,8 @@
       <source src="static/images/index/background/background8.mp4" type="video/mp4">
   </video>
   <div class="header-background-intro-text">
-      <h1 key="build-future">СТРОИМ БУДУЩЕЕ ОРГАНИЗАЦИИ</h1>
+      <h1 key="build-future" id="about-company">СТРОИМ БУДУЩЕЕ ОРГАНИЗАЦИИ</h1>
       <p key="company-description">IT компания «Malstavo Information Technology Company» специализируется на разработке уникальных кодов, создавая инновационные решения для переопределения бизнес-перспектив. Персонализированный подход, высокий профессионализм, и успешные проекты делают нас ключевым игроком в мире технологий.</p>
-      <div class="button">
-        <a href="#"><span key="learn-more">ПОДРОБНЕЕ</span></a>
-      </div>
   </div>
 </div>
 <div class="basic-section">
@@ -105,7 +102,7 @@
     <h2 class="heading-pg" key="what-services">Какие услуги предоставляет наша компания?</h2>
     <p class="description-pg" key="services-description">Компания Malstavo предоставляет широкий спектр услуг в области IT-технологий, охватывая ключевые направления, необходимые как стартапам, так и устоявшимся компаниям для обеспечения стабильного роста. Объединяя некоторые из наших услуг, мы стремимся достичь оптимальных результатов.</p>
     <div class="w-layout-grid service-grid">
-      <a href="/order?category=web-development" class="service-card w-inline-block">
+      <a href="/order?category=web-development" class="service-card w-inline-block" id="web-development">
         <div class="service-img">
           <img src="static/images/index/service/create-site.png" class="hover-image">
         </div>
@@ -147,7 +144,7 @@
           </div>
         </div>
       </a>
-      <a href="/order?category=discord-bots" class="service-card w-inline-block">
+      <a href="/order?category=discord-bots" class="service-card w-inline-block" id="discord-bots">
         <div class="service-img">
           <img src="static/images/index/service/discord.png" class="hover-image">
         </div>
@@ -161,7 +158,7 @@
           </div>
         </div>
       </a>
-      <a href="/order?category=technical-maintenance" class="service-card w-inline-block">
+      <a href="/order?category=technical-maintenance" class="service-card w-inline-block" id="technical-support">
         <div class="service-img">
           <img src="static/images/index/service/service.png" class="hover-image">
         </div>
@@ -208,10 +205,10 @@
           <img src="static/images/index/service/sapsan-cctv.png" class="hover-image">
         </div>
         <div class="service-content">
-          <h1 key="video-surveillance">Камеры видеонаблюдения</h1>
-          <p key="video-surveillance-description">"SAPSAN FIRMA" специализируется на обеспечении безопасности крупных компаний через интегрированные системы, включая установку высокотехнологичных камер видеонаблюдения. Наш подход обеспечивает надежную защиту и мониторинг.</p>
+          <h1 key="video-surveillance">Товарные Маркеплейсы</h1>
+          <p key="video-surveillance-description">Проектирование и разработка товарных маркетплейсов с учетом специфики товаров, процессов и отрасли.</p>
           <div class="service-tab-holder">
-            <div class="servce-tag" style="background-color: red;">
+            <div class="servce-tag">
               <div class="service-text-tag" style="color: #f0f0f0;" key="for-companies">ДЛЯ КОМПАНИЙ</div>
             </div>
             <div class="servce-tag">
@@ -280,9 +277,9 @@
           <i class='bx bxs-phone icon-i'></i>
         </div>
         <h2 key="number">Номера телефона</h2>
-        <p>+1-800-555-IDEA</p>
-        <p>+1-800-555-IDEA</p>
-        <p>+1-800-555-IDEA</p>
+        <p>+1-800-555-5200</p>
+        <p>+1-800-555-0052</p>
+        <p>+1-800-555-0520</p>
       </div>
 
       <div class="data">
@@ -335,41 +332,35 @@
     <h1 key="general">Общее💙</h1>
     <ul>
       <li><a href="#" key="feedbacklink">Обратная связь</a></li>
-      <li><a href="#" key="complaintlink">Отправить жалобу</a></li>
-      <li><a href="#" key="aboutuslink">О компании</a></li>
+      <li><a href="https://e-tutynushy.kz/main" key="complaintlink">Отправить жалобу</a></li>
+      <li><a href="#about-company" key="aboutuslink">О компании</a></li>
     </ul>
   </div>
   <div class="footer-section">
     <h1 key="socialmedia">Социальные сети🌐</h1>
     <ul>
-      <li><a href="#" key="vkgroup">Группа ВКонтакте</a></li>
-      <li><a href="#" key="telegramgroup">Группа Telegram</a></li>
-      <li><a href="#" key="tiktokaccount">Аккаунт Tiktok</a></li>
-      <li><a href="#" key="instagramaccount">Аккаунт Instagram</a></li>
+      <li><a href="https://vk.com/" key="vkgroup" target="_blank">Группа ВКонтакте</a></li>
+      <li><a href="https://web.telegram.org/k/" key="telegramgroup" target="_blank">Группа Telegram</a></li>
+      <li><a href="https://www.tiktok.com/" key="tiktokaccount" target="_blank">Аккаунт Tiktok</a></li>
+      <li><a href="https://www.instagram.com/" key="instagramaccount" target="_blank">Аккаунт Instagram</a></li>
     </ul>
   </div>
   <div class="footer-section">
     <h1 key="services">Услуги📑</h1>
     <ul>
-      <li><a href="#" key="webdevelopment">Веб-разработка</a></li>
-      <li><a href="#" key="bots">Боты</a></li>
-      <li><a href="#" key="maintenance">Техническое обслуживание</a></li>
-      <li><a href="#" key="surveillancecameras">Камеры видеонаблюдения</a></li>
+      <li><a href="#web-development" key="webdevelopment">Веб-разработка</a></li>
+      <li><a href="#discord-bots" key="bots">Боты</a></li>
+      <li><a href="#technical-support" key="maintenance">Техническое обслуживание</a></li>
+      <li><a href="#" key="video-surveillance" >Товарные Маркеплейсы</a></li>
     </ul>
   </div>
   <div class="footer-section">
     <h1 key="other">Другое💠</h1>
     <ul>
-      <li><a href="#" key="reviews">Отзывы</a></li>
-      <li><a href="#" key="resale">Resale-Partners</a></li>
-      <li><a href="#" key="terms">Пользовательское соглашение</a></li>
-      <li><a href="#" key="knowledgebase">База знаний</a></li>
-    </ul>
-  </div>
-  <div class="footer-section">
-    <h1 key="outsourcingcompany">Аутсорсинговая компания🦅</h1>
-    <ul>
-      <li><a href="#" key="outsourcing">SAPSAN FIRMA - OUTSOURCING</a></li>
+      <li><a href="https://2gis.kz/almaty/firm/70000001028396326/tab/reviews" key="reviews" target="_blank">Отзывы</a></li>
+      <li><a href="https://www.cybereason.com/partners/resale-partners" key="resale" target="_blank">Resale-Partners</a></li>
+      <li><a href="https://yandex.ru/legal/rules/" key="terms" target="_blank">Пользовательское соглашение</a></li>
+      <li><a href="https://yandex.cloud/ru/services/wiki?utm_referrer=https%3A%2F%2Fyandex.kz%2F" key="knowledgebase" target="_blank">База знаний</a></li>
     </ul>
   </div>
 </div>
@@ -377,8 +368,8 @@
   <p key="copyright">💠Все права защищены</p>
 </div>
 <div class="copyright-info">
-  <p key="24hcontact">ideas@malstavo.com - Круглосуточно</p>
-  <p key="afterhourscontact">ideas@malstavo.com - Ненормативный</p>
+  <p key="24hcontact">malik@malstavo.com - Круглосуточно</p>
+  <p key="afterhourscontact">stavr@malstavo.com - Ненормативный</p>
 </div>
 </footer>
 
