--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
                 <a href="#service-grid" key="services-header">Услуги</a>
             </li>
             <li>
-                <a href="/templates/login-form.html" class="active" key="log-in-account">Войти в аккаунт</a>
+                <a href="/login" class="active" key="log-in-account">Войти в аккаунт</a>
             </li>
         </ul>
     </nav>
