--- a/templates/order-page.html
+++ b/templates/order-page.html
@@ -63,14 +63,14 @@
           <label for="category" key="category">Категория услуги:</label>
           <select id="category" name="category" class="input-field">
             <option value="" disabled selected key="select-category">Выберите категорию</option>
-            <option value="web-development" id="" key="web-development">Разработка сайтов</option>
-            <option value="mobile-apps" id="" key="mobile-apps">Мобильные приложения</option>
-            <option value="telegram-bots" id="" key="telegram-bots">Разработка Telegram-ботов</option>
-            <option value="discord-bots" id="" key="discord-bots">Разработка Discord-ботов</option>
-            <option value="technical-maintenance" id="" key="technical-maintenance">Техническое обслуживание</option>
-            <option value="hosting-vds" id="" key="hosting-vds">Bussines-VDS Хостинг</option>
-            <option value="domain-registration" id="" key="domain-registration">Регистрация доменных имен</option>
-            <option value="security-cameras" id="" key="security-cameras">Камеры видеонаблюдения</option>
+            <option value="web-development" key="web-development">Разработка сайтов</option>
+            <option value="mobile-apps" key="mobile-apps">Мобильные приложения</option>
+            <option value="telegram-bots" key="telegram-bots">Разработка Telegram-ботов</option>
+            <option value="discord-bots" key="discord-bots">Разработка Discord-ботов</option>
+            <option value="technical-maintenance" key="technical-maintenance">Техническое обслуживание</option>
+            <option value="hosting-vds" key="hosting-vds">Bussines-VDS Хостинг</option>
+            <option value="domain-registration" key="domain-registration">Регистрация доменных имен</option>
+            <option value="security-cameras" key="security-cameras">Камеры видеонаблюдения</option>
           </select>
 
           <label for="comments" key="comments">Комментарий:</label>
@@ -84,7 +84,7 @@
                 </svg>
                 <div class="flex flex-auto max-h-48 w-2/5 mx-auto -mt-10">
                 </div>
-                <p class="pointer-none text-gray-500 " key="drag-drop"><span class="text-sm">Перетащите</span> файлы сюда <br /> или <a href="" id="" class="text-blue-600 hover:underline">выберите файл</a>  на вашем компьютере</p>
+                <p class="pointer-none text-gray-500 " key="drag-drop"><span class="text-sm">Перетащите</span> файлы сюда <br /> или <a href="" class="text-blue-600 hover:underline">выберите файл</a>  на вашем компьютере</p>
             </div>
             <input type="file" class="hidden">
         </label>
@@ -185,12 +185,12 @@
               <div class="overlay-panel overlay-left">
                 <h1 class="create-form" key="welcome-again">С возвращением!</h1>
                 <p key="keep-touch">Чтобы поддерживать с нами связь, пожалуйста, войдите в систему, указав свои личные данные</p>
-                <button class="ghost" id="signIn" key="login-confirm">Подтвердить</button>
+                <button class="ghost" id="signIn" key="login-confirm">Войти в аккаунт</button>
               </div>
               <div class="overlay-panel overlay-right">
                 <h1 key="hi-friend">Привет, Друг!</h1>
                 <p key="input-your-value">Введите свои личные данные и отправляйтесь в путешествие вместе с нами</p>
-                <button class="ghost" id="signUp" key="login-confirm">Подтвердить</button>
+                <button class="ghost" id="signUp" key="login-confirm">Зарегистрироваться</button>
               </div>
             </div>
           </div>
