--- a/templates/login-form.html
+++ b/templates/login-form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/index/login-form.css">
+    <link rel="stylesheet" href="static/css/index/login-form.css">
 </head>
 <body>
     <div class="container" id="container">
@@ -50,19 +50,19 @@
                 <div class="overlay-panel overlay-left">
                     <h1 class="create-form">С возвращением!</h1>
                     <p>Чтобы поддерживать с нами связь, пожалуйста, войдите в систему, указав свои личные данные</p>
-                    <button class="ghost" id="signIn">Подтвердить</button>
+                    <button class="ghost" id="signIn">Войти в аккаунт</button>
                 </div>
                 <div class="overlay-panel overlay-right">
                     <h1>Привет, Друг!</h1>
                     <p>Введите свои личные данные и отправляйтесь в путешествие вместе с нами</p>
-                    <button class="ghost" id="signUp">Подтвердить</button>
+                    <button class="ghost" id="signUp">Зарегистрироваться</button>
                 </div>
             </div>
         </div>
     </div>
     
 
-<script src="/js/index/logim-form-swap.js"></script>
-<script src="/js/index/check-pass.js"></script>
+<script src="static/js/logim-form-swap.js"></script>
+<script src="static/js/check-pass.js"></script>
 </body>
 </html>
