--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
     </label>
 </header>
 <a href="" class="contact-button" id="contactButton">
-  <i class='bx bxs-contact icon-i-white;' style="color: #fff;" height="100px"></i>
+  <i class='bx bxs-contact icon-i-white;'></i>
 </a>
 <div class="contact-menu" id="contactMenu">
   <div class="contact-item">
@@ -369,7 +369,7 @@
 </div>
 <div class="copyright-info">
   <p key="24hcontact">malik@malstavo.com - Круглосуточно</p>
-  <p key="afterhourscontact">stavr@malstavo.com - Ненормативный</p>
+  <p key="afterhourscontact">stavr@malstavo.com - По настроению</p>
 </div>
 </footer>
 
