--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,14 @@
 </div>
 
 <header class="header">
+  <div class="header-logo">
+    <img src="/image/index/logopit.png">
+  </div>
+  <input type="checkbox" id="nav_check" hidden>
+  <nav>
     <div class="header-logo">
+      <img src="/image/index/logopit.png" alt="Logo">
     </div>
-    <input type="checkbox" id="nav_check" hidden>
-    <nav>
         <ul>
             <li>
                 <a href="" key="">Malstavo</a>
