--- a/templates/order-page.html
+++ b/templates/order-page.html
@@ -26,9 +26,13 @@
     
     <header class="header">
         <div class="header-logo">
+          <img src="/image/index/logopit.png">
         </div>
         <input type="checkbox" id="nav_check" hidden>
-        <nav>     
+        <nav>
+          <div class="header-logo">
+            <img src="/image/index/logopit.png" alt="Logo">
+          </div>     
             <ul>
               <li>
                 <a href="" key="">Malstavo</a>
